<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options. -->

<resources>
    <!-- Simple strings. -->
    <string name="app_name">IPsec Tools</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>

    <!-- This is a complex string containing style runs. -->
    <string name="main_label">Hello2<u>th<ignore>e</ignore>re</u>, <i>you</i> <b>Activity</b>!</string>
    <string name="set_preferences">Preferences</string>
    <string name="start">Start</string>
    <string name="native_service_started">IPsec VPN running</string>
    <string name="native_service_label">IPsec VPN</string>
    <string name="native_service_connected">IPsec VPN connected</string>
    <string name="native_service_disconnected">IPsec VPN disconnected</string>
    <string name="stop">Stop</string>
    <string name="connect_peer">Connect to peer</string>
    <string name="disconnect_peer">Disconnect peer</string>
    <string name="edit_peer">Edit peer</string>
    <string name="delete_peer">Delete peer</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="name">Name</string>
    <string name="template_file">Template file</string>
    <string name="remote_address">Remote address</string>
    <string name="notify_peer_up">IPsec VPN peer up</string>
    <string name="notify_peer_down">IPsec VPN peer down</string>
    <string name="title_delete_peer">Delete peer</string>
    <string name="msg_delete_peer">The peer \&quot;%1$s\&quot; will be deleted.</string>
    <string name="preferences">Settings</string>
    <string name="enabled">Enabled</string>
    <string name="msg_disconnect_first">You must disconnect first.</string>
    <string name="msg_fill_in_name">Please, fill in a name.</string>
    <string name="add_ipsec_vpn">Add IPsec VPN</string>
    <string name="ipsec_vpns">IPsec VPNs</string>
    <string name="ipsec_vpn_peer">IPsec VPN Peer</string>
    <string name="unknown_host_name">Unknown host name \&quot;%1$s\&quot;.</string>
    <string name="progress_peer">Processing...</string>
    <string name="about">About</string>
    <string name="about_title">About %s</string>
    <string name="ok">Ok</string>
    <string name="dns1">DNS Server 1</string>
    <string name="dns2">DNS Server 2</string>
    <string name="psk">Pre shared key (PSK)</string>
    <string name="cert_file">Certificate file</string>
    <string name="key_file">Private key file</string>
    <string name="save_examples">Save examples</string>
</resources>

