<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
                android:title="@string/ipsec_vpn_peer">
		        <EditTextPreference
                		android:title="@string/name"
                		android:key="namePref" />
                <EditTextPreference
                		android:title="@string/remote_address"
                		android:key="remoteAddrPref" />
                <EditTextPreference
                		android:title="@string/dns1"
                		android:key="dns1Pref" />
                <EditTextPreference
                		android:title="@string/dns2"
                		android:key="dns2Pref" />
 		<EditTextPreference
        		        android:title="@string/psk"
                		android:key="pskPref"
				android:password="true" />
                <Preference
				android:title="@string/template_file"
				android:key="templatePref" />
                <ListPreference
				android:title="@string/cert_alias"
				android:key="certAliasPref" />
                <Preference
				android:title="@string/cert_file"
				android:key="certPref" />
                <Preference
				android:title="@string/key_file"
				android:key="keyPref" />
        </PreferenceCategory>
</PreferenceScreen>
