<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/start_service"
          android:title="@string/start_service"
          android:icon="@android:drawable/button_onoff_indicator_off" />
    <item android:id="@+id/stop_service"
          android:title="@string/stop_service"
          android:icon="@android:drawable/button_onoff_indicator_on" />
    <!-- <item android:id="@+id/preferences"
          android:title="@string/preferences"
          android:icon="@android:drawable/ic_menu_preferences" /> -->
    <item android:id="@+id/import_cert"
          android:title="@string/import_cert" />
    <item android:id="@+id/save_examples"
          android:title="@string/save_examples"
          android:icon="@android:drawable/ic_menu_save" />
    <item android:id="@+id/show_about"
          android:title="@string/about"
          android:icon="@android:drawable/ic_menu_info_details" />
</menu>
