<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This file describes the layout of the main SkeletonApp activity
     user interface.
 -->

<!-- The top view is a layout manager that places its child views into
     a row, here set to be vertical (so the first is at the top) -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center">

	<TextView android:id="@+id/output"
   		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" />

    	<LinearLayout
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:orientation="vertical"
    		android:gravity="center">
    		<Button android:id="@+id/pref_button" style="@style/ActionButton"
            	android:text="@string/set_preferences" />
    		<Button android:id="@+id/start_button" style="@style/ActionButton"
            	android:text="@string/start"
            	android:layout_width="fill_parent" />
    		<Button android:id="@+id/stop_button" style="@style/ActionButton"
            	android:text="@string/stop"
            	android:layout_width="fill_parent" />
		</LinearLayout>
</LinearLayout>


